# cmake-project-skeleton

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BuildOptions.cmake  CMakeLists.txt  Makefile  Packaging.cmake  README.md
docs/: CONTRIBUTING.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt
src/lib/example/: CMakeLists.txt  example.c  example.h
src/utility/: CMakeLists.txt
test/: CMakeLists.txt  catch2_test_case.cpp  main.c  test_suite.c  tests.h
tools/: CI.jenkinsfile  Jenkinsfile  clang-tidy.sh  deploy_skeleton.sh  download_and_deploy.sh  format-patch.sh  format.sh  install_arm_gcc.sh  install_deps.sh  setup_env.sh
